# mongodbanonymizer

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml  mkdocs.yml
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: pr-preview.yml  release.yml
data/: identifier.csv  identifier_category.csv
docs/: Makefile  index.md  install.md
docs/how-to/: README.md
docs/masking-methods/: README.md
docs/reference/: README.md
docs/tutorial/: README.md
src/: analyzer.rs  args.rs  helpers.rs  lib.rs  main.rs  masking.rs  models.rs
src/commands/: apply.rs  infer.rs  init.rs  mask.rs  mod.rs
tests/: cli_tests.rs  e2e_sample_tests.rs  e2e_tests.rs
