[package]
name = "mongodbanonymizer"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "manon"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.32"
indexmap = { version = "2.14.0", features = ["serde"] }
mongodb = "3.6.0"
rand = "0.10.1"
chrono = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
lazy_static = "1.5.0"
csv = "1.4.0"


[dev-dependencies]
tempfile = "3.27.0"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["mongo"] }
tokio = { version = "1.52.3", features = ["full"] }
